# pime

./: .gitignore  .gitmodules  .sconsign.dblite  CMakeLists.txt  Makefile  PACKAGE_NAME  SConstruct  build.md  build.sh  categories.txt  categories_id.h  categories_names.h  cave.c  cave.cpp  cave.h  craft.cpp  craft.h  create_ctags  dungeon.c  dungeon.cpp  dungeon.h  elements.c  elements.h  generate_headers.sh  install.md  items.c  items.h  items.txt  items_id.h  items_names.h  main.c  main.cpp  menu.c  menu.cpp  menu.h  music.cpp  music.h  notifier.cpp  notifier.h  object.h  (+22 more)
.github/workflows/: cmake-multi-platform.yml
alchemist/: Makefile  ax_blade.cpp  ax_blade.h  axe.cpp  axe.h  axe_handle.h  el_list.cpp  el_list.h  elements.cpp  elements.h  knife.cpp  knife.h  knife_blade.cpp  knife_blade.h  knife_handle.cpp  knife_handle.h  main.cpp  names.cpp  player_stats.h  start  test_axe.h
alchemist-tui/: Makefile  main.cpp
models/: tree.blend
src/: build.sh  bush.cpp  bush.h  cave.h  chunk_renderer.cpp  chunk_renderer.h  craft.cpp  craft.h  ftree.cpp  ftree.h  g_plant.cpp  g_plant.h  game_time.cpp  item.cpp  item.h  level_node.cpp  level_node.h  master_node.cpp  master_node.h  player.cpp  player.h  player_input_sync.cpp  player_input_sync.h  register_types.cpp  status_line.cpp  status_line.h  stozek.cpp  stozek.h  terrain.cpp  terrain.h  tiles.h  time.cpp  time.h  world.cpp  world.h
src/alchemist/: Makefile  axe.cpp  axe.h  axe_blade.cpp  axe_blade.h  axe_handle.cpp  el_list.cpp  el_list.h  elements.cpp  elements.h  game_time.cpp  game_time.h  main.cpp  names.cpp  names.h  player_stats.h  test_axe.cpp
src/alchemist-tui/: Makefile  main.cpp
the_game/: 3dworld.tscn  Master.tscn  TerrainScript.gd  camera.gd  compute.gd  foo.gd  icon.svg.import  new_script.gd  player.tscn  project.godot  rock.tscn  shader.comp.glsl  shader.comp.glsl.import  test.tscn  test123.tscn  tree.tscn
the_game/fonts/: nerdfont.otf.import  nerdfont.ttf.import
the_game/models/: new_shader.tres  new_shader_material.tres  test.glb  test.glb.import  test_material.tres  test_test.png.import  tree.glb  (+1 more)
(+45 files in other folders)
